samples/_failures_safe/1761224704_3258db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15e2dfe6.c: In function ‘main’:
./samples/SAFE/__tmp_15e2dfe6.c:138:39: error: expected ‘)’ at end of input
  138 |         size_t len = strlen(input_line
      |                            ~          ^
      |                                       )
./samples/SAFE/__tmp_15e2dfe6.c:138:9: error: expected declaration or statement at end of input
  138 |         size_t len = strlen(input_line
      |         ^~~~~~
./samples/SAFE/__tmp_15e2dfe6.c:138:9: error: expected declaration or statement at end of input
